[package]
name = "drawbird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["ws"] }
futures = "0.3.28"
include-lines = "1.1.2"
names = { version = "0.14.0", default-features = false }
rmp-serde = "1.1.2"
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
